docs: correct grammar in README and update homepage link in package.json

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "email": "yusifaliyevpro@gmail.com",
     "url": "https://yusifaliyevpro.com/"
   },
-  "homepage": "https://github.com/yusifaliyevpro/countries",
+  "homepage": "https://github.com/yusifaliyevpro/countries#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/yusifaliyevpro/countries"
