--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yusifaliyevpro/countries",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "publishConfig": {
     "access": "public"
   },
@@ -30,7 +30,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "start": "node dist/index.js",
     "test": "jest"
   },
@@ -67,7 +67,7 @@
     "@types/node": "^22.14.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.2",
-    "tsup": "^8.4.0",
+    "tsdown": "^0.12.6",
     "typescript": "^5.8.3"
   },
   "pnpm": {
