--- a/package.json
+++ b/package.json
@@ -1,6 +1,45 @@
 {
   "name": "@yusifaliyevpro/countries",
-  "version": "2.2.1",
+  "description": "TypeScript wrapper for Rest Countries API to fetch country data by codes, capitals, or all countries with full typings.",
+  "version": "2.2.2",
+  "license": "MIT",
+  "type": "commonjs",
+  "author": {
+    "name": "Yusif Aliyev",
+    "email": "yusifaliyevpro@gmail.com",
+    "url": "https://yusifaliyevpro.com/"
+  },
+  "homepage": "https://github.com/yusifaliyevpro/countries#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yusifaliyevpro/countries"
+  },
+  "scripts": {
+    "build": "tsdown",
+    "test": "tsdown && jest"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/node": "^22.15.34",
+    "jest": "^30.0.3",
+    "ts-jest": "^29.4.0",
+    "tsdown": "^0.12.9",
+    "typescript": "^5.8.3"
+  },
+  "keywords": [
+    "countries",
+    "restcountries",
+    "country-api",
+    "typescript",
+    "iso3166",
+    "cca2",
+    "cca3",
+    "country-data",
+    "world-countries",
+    "capital-cities",
+    "region",
+    "flags"
+  ],
   "publishConfig": {
     "access": "public"
   },
@@ -28,46 +67,5 @@
   },
   "files": [
     "dist"
-  ],
-  "scripts": {
-    "build": "tsdown",
-    "start": "node dist/index.js",
-    "test": "jest"
-  },
-  "keywords": [
-    "countries",
-    "restcountries",
-    "country-api",
-    "typescript",
-    "iso3166",
-    "cca2",
-    "cca3",
-    "country-data",
-    "world-countries",
-    "capital-cities",
-    "region",
-    "flags"
-  ],
-  "author": {
-    "name": "Yusif Aliyev",
-    "email": "yusifaliyevpro@gmail.com",
-    "url": "https://yusifaliyevpro.com/"
-  },
-  "homepage": "https://github.com/yusifaliyevpro/countries#readme",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yusifaliyevpro/countries"
-  },
-  "license": "MIT",
-  "type": "commonjs",
-  "description": "TypeScript wrapper for Rest Countries API to fetch country data by codes, capitals, or all countries with full typings.",
-  "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^24.0.3",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.3.4",
-    "tsdown": "^0.12.7",
-    "typescript": "^5.8.3"
-  }
+  ]
 }
